add family module, more fixes, more refactors

--- a/client/modules/core/components/style.css
+++ b/client/modules/core/components/style.css
@@ -30,6 +30,7 @@ header {
   bottom: 22px;
 }
 
+.main-content.opened,
 .page.opened .appbar {
     -moz-transform: translate(256px,0);
     -ms-transform: translate(256px,0);
